--- a/index.html
+++ b/index.html
@@ -15,43 +15,50 @@
     <div>
       <img src="letfix.jpg" id="logo" />
     </div>
-    <div id="navbar">
-      <ul id="navitems">
-        <li class="active"><a href="index.html">Home</a></li>
+    <div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="#Locator">Locator</a></li>
-        <li><a href="#Gallery">Gallery</a></li>
-        <li><a href="#Bridal">Bridal</a></li>
-        <li><a href="#Franchisee">Franchisee</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li class="dropdown">
+          <button class="dropbtn">Services
+          </button>
+          <div class="dropdown-content">
+            <a href="menservices.html">Men</a>
+            <a href="womenservices.html">Women</a>
+          </div>
+        </li>
+        <li><a href="locator.html">Locator</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="bridal.html">Bridal</a></li>
+        <li><a href="franchisee.html">Franchisee</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="home">
-    <div id="home-banner">
+    <div>
       <img
         src="http://mygreentrends.in/system/multiple_images/desktop_images/000/000/018/original/475x325_landing_page.jpg?1590817848" />
       <img
         src="http://mygreentrends.in/system/multiple_images/background_images/000/000/018/original/533x325_landing_page.jpg?1590817922" />
-        
+
     </div>
-        </div>
+  </div>
   </div>
   </div>
 
 
   <div class="footer">
     <div class="container">
-        <div id="social-icons-and-nav">
-            <ul id="social-icons">
-              <li style="color:white">Reach out to us on </li>
+      <div id="social-icons-and-nav">
+        <ul id="social-icons">
+          <li style="color:white">Reach out to us on </li>
 
-                <li><a href="#" class="fa fa-facebook"></a></li>
-                <li><a href="#" class="fa fa-twitter"></a></li>
-                <li><a href="#" class="fa fa-youtube"></a></li>
-            </ul>
-        </div>
+          <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
+          <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
+          <li><a href="https://www.youtube.com/" class="fa fa-youtube"></a></li>
+        </ul>
+      </div>
     </div>
 
 
@@ -59,7 +66,3 @@
 </body>
 
 </html>
-
-
-
-
