--- a/html/womenservices.html
+++ b/html/womenservices.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/services.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Letfix Technologies</title>
 </head>
@@ -12,11 +13,11 @@
 <body>
     <div id="header">
         <div>
-            <img src="letfix.jpg" id="logo" />
+            <img src="../letfix.jpg" id="logo" />
         </div>
         <div>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li class="dropdown">
                     <button class="dropbtn">Services
@@ -37,58 +38,61 @@
     <div class="home">
         <img id="men"
             src="http://mygreentrends.in/system/multiple_images/desktop_images/000/000/009/original/Women-service-desktop.jpg?1437127853" />
-        <div class="flex-container">
+        <div class="flex-container" id="row">
 
-            <div>
+            <div id="AdvStyle">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/017/bthumb/Untitled-2.jpg?1432533887" />
                 <div class="mendata">ADVANCED STYLING</div>
             </div>
-            <div>
+            <div id="makeup">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/016/bthumb/cut-style.jpg?1432533866" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">MAKEUP & STYLING </div>
             </div>
-            <div>
+            <div id="detan">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/018/bthumb/detan.jpg?1432535813" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">DETAN & BLEACH</div>
             </div>
-            <div>
+            <div id="facial">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/031/bthumb/facials.jpg?1432543425" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">FACIAL IS EVERYTHING</div>
             </div>
-            <div>
+            <div id="hair">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/006/bthumb/hair-colouring.jpg?1432544972" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">HAIR COLORING</div>
             </div>
 
 
+            <div id="prices">
+
+            </div>
 
         </div>
         <br>
         <div class="flex-container" id="row2">
-            <div>
+            <div id="AdvStyle1">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/020/bthumb/hair-style.jpg?1432543810" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">MAKEUP AND STYLE</div>
             </div>
-            <div>
+            <div id="makeup1">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/009/bthumb/make-up-and-styling.jpg?1432545379" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">BEST MANICURE</div>
             </div>
-            <div>
+            <div id="detan1">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/004/bthumb/mancure.jpg?1432544250" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">BEST PEDICURE</div>
             </div>
-            <div>
+            <div id="facial1">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/003/bthumb/pedicure.jpg?1432544129" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">SUPER HAIR CARE</div>
             </div>
             <div>
                 <img class="menimg" id="locate"
@@ -96,7 +100,9 @@
             </div>
 
 
+<div id="prices">
 
+</div>
 
 
         </div>
@@ -119,7 +125,7 @@
                 </div>
             </div>
 
-
+            <script src="../js/services.js"></script>
 
 
 </body>
