--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>Letfix Technologies</title>
@@ -17,21 +17,21 @@
     </div>
     <div>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About us</a></li>
+        <li><a href="./html/index.html">Home</a></li>
+        <li><a href="./html/about.html">About us</a></li>
         <li class="dropdown">
           <button class="dropbtn">Services
           </button>
           <div class="dropdown-content">
-            <a href="menservices.html">Men</a>
-            <a href="womenservices.html">Women</a>
+            <a href="./html/menservices.html">Men</a>
+            <a href="./html/womenservices.html">Women</a>
           </div>
         </li>
-        <li><a href="locator.html">Locator</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="bridal.html">Bridal</a></li>
-        <li><a href="franchisee.html">Franchisee</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="./html/locator.html">Locator</a></li>
+        <li><a href="./html/gallery.html">Gallery</a></li>
+        <li><a href="./html/bridal.html">Bridal</a></li>
+        <li><a href="./html/franchisee.html">Franchisee</a></li>
+        <li><a href="./html/contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -44,9 +44,9 @@
 
     </div>
   </div>
-  </div>
-  </div>
 
+  </div>
+  </div>
 
   <div class="footer">
     <div class="container">
