--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Letfix Technologies</title>
@@ -13,11 +13,11 @@
 <body>
     <div id="header">
         <div>
-            <img src="letfix.jpg" id="logo" />
+            <img src="../letfix.jpg" id="logo" />
         </div>
         <div>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li class="dropdown">
                     <button class="dropbtn">Services
