--- a/html/menservices.html
+++ b/html/menservices.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/services.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Letfix Technologies</title>
 </head>
@@ -12,11 +13,11 @@
 <body>
     <div id="header">
         <div>
-            <img src="letfix.jpg" id="logo" />
+            <img src="../letfix.jpg" id="logo" />
         </div>
         <div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
+            <ul>locate
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li class="dropdown">
                     <button class="dropbtn">Services
@@ -37,64 +38,72 @@
     <div class="home">
         <img id="men"
             src="http://mygreentrends.in/system/multiple_images/desktop_images/000/000/008/original/Men-service-desktop.jpg?1437127738" />
-        <div class="flex-container">
+        <div class="flex-container" id="row">
 
-            <div>
+            <div id="AdvStyle">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/014/bthumb/web_page-02.jpg?1445943051" />
                 <div class="mendata">ADVANCED STYLING</div>
             </div>
-            <div>
+            <div id="makeup">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/022/bthumb/web_page-03.jpg?1445943122" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">MAKEUP & STYLING  </div>
             </div>
-            <div>
+            <div id="detan">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/023/bthumb/web_page-04.jpg?1445943183" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">DETAN & BLEACH</div>
             </div>
-            <div>
+            <div id="facial">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/024/bthumb/web_page-05.jpg?1445943233" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">FACIAL IS EVERYTHING</div>
             </div>
-            <div>
+            <div id="hair">
                 <img class="menimg"
                     src="http://mygreentrends.in/system/services/images/000/000/025/bthumb/web_page-07.jpg?1445943383" />
-                <div class="mendata">ADVANCED STYLING</div>
+                <div class="mendata">HAIR COLORING</div>
             </div>
 
+            <div id="prices">
 
+            </div>
         </div>
         <br>
         <div class="flex-container" id="row2">
-            <div>
+            <div id="AdvStyle1">
                 <img class="menimg2"
                     src="http://mygreentrends.in/system/services/images/000/000/026/bthumb/web_page-08.jpg?1445943444" />
-                <div class="mendata2">ADVANCED STYLING</div>
+                <div class="mendata2">MAKEUP AND STYLE</div>
             </div>
 
-            <div>
+            <div id="makeup1">
                 <img class="menimg2"
                     src="http://mygreentrends.in/system/services/images/000/000/027/bthumb/web_page-09.jpg?1445943503" />
-                <div class="mendata2">ADVANCED STYLING</div>
+                <div class="mendata2">BEST MANICURE</div>
             </div>
-            <div>
+            <div id="detan1">
                 <img class="menimg2"
                     src="http://mygreentrends.in/system/services/images/000/000/028/bthumb/web_page-10.jpg?1445943538" />
 
-                <div class="mendata2">ADVANCED STYLING</div>
+                <div class="mendata2">BEST PEDICURE</div>
             </div>
-            <div>
+            <div id="facial1">
                 <img class="menimg2"
                     src="http://mygreentrends.in/system/services/images/000/000/034/bthumb/web_page-06.jpg?1445943569" />
 
-                <div class="mendata2">ADVANCED STYLING</div>
+                <div class="mendata2">SUPER HAIR CARE</div>
             </div>
             <div>
-                <img class="menimg2" id="locate"
+                <a href="locator.html">
+                    <img class="menimg2" id="locate"
                     src="http://mygreentrends.in/assets/home-salon-locate-d8c4c7d87f6d9e769b9e4ebdf45c4aab.png" />
+
+                </a>
+                
+            </div>
+            <div id="prices">
 
             </div>
 
@@ -120,7 +129,7 @@
 
 
 
-
+<script src="../js/services.js"></script>
 </body>
 
 </html>
