--- a/html/franchisee.html
+++ b/html/franchisee.html
@@ -2,95 +2,104 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/franchisee.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Letfix Technologies</title>
+  <title>Letfix Technologies</title>
 </head>
 
 <body>
-    <div id="header">
-        <div>
-          <img src="../letfix.jpg" id="logo" />
-        </div>
-        <div>
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li class="dropdown">
-              <button class="dropbtn">Services
-              </button>
-              <div class="dropdown-content">
-                <a href="menservices.html">Men</a>
-                <a href="womenservices.html">Women</a>
-              </div>
-            </li>
-            <li><a href="locator.html">Locator</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="bridal.html">Bridal</a></li>
-            <li><a href="franchisee.html">Franchisee</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
+  <div id="header">
     <div>
-       
-    <div>
-        <img src="http://mygreentrends.in/system/multiple_images/desktop_images/000/000/004/original/franchise_banner.jpg?1437396922"
-            style="padding-top: 2%;" />
-        <p id="franchiseetxt" style="color: #00cc7a">We are looking to expand to a pan-India presence with our chain of
-            high-end styling and spa services offered
-            in a stylish and serene environment. If you share the same levels of commitment to delivering a superior
-            customer experience as we do, then do get in touch with us. Take up this simple quiz to check if franchising
-            is right for you.</p>
+      <img src="../letfix.jpg" id="logo" />
     </div>
-    <div style="background-color: #1affa3; width: 30%; display: inline-block;text-align: center;">
+    <div>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li class="dropdown">
+          <button class="dropbtn">Services
+          </button>
+          <div class="dropdown-content">
+            <a href="menservices.html">Men</a>
+            <a href="womenservices.html">Women</a>
+          </div>
+        </li>
+        <li><a href="locator.html">Locator</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="bridal.html">Bridal</a></li>
+        <li><a href="franchisee.html">Franchisee</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+  <div>
 
-        <p style="padding-top: 2%;color:black;text-align: center;">FRANCHISEE OPPORTUNITIES</p>
-        <form > 
+    <div>
+      <img
+        src="http://mygreentrends.in/system/multiple_images/desktop_images/000/000/004/original/franchise_banner.jpg?1437396922"
+        style="padding-top: 2%;" />
+      <p id="franchiseetxt" style="color: #00cc7a">We are looking to expand to a pan-India presence with our chain of
+        high-end styling and spa services offered
+        in a stylish and serene environment. If you share the same levels of commitment to delivering a superior
+        customer experience as we do, then do get in touch with us. Take up this simple quiz to check if franchising
+        is right for you.</p>
+    </div>
 
-            <div>
-                <input id="textbox1" type="text" placeholder="Name*">
-            </div>
-            <br>
-            <div>
-                <input id="textbox1" type="text" placeholder="Phone*">
-            </div>
-            <br>
-            <div>
-                <input id="textbox1" type="text" placeholder="Location*">
-            </div>
-            <br>
-            <div>
-                <input id="textbox1" type="text" placeholder="Email*">
-            </div>
-            <br>
-            <div>
-                <textarea id="textbox1" type="text" placeholder="Message"></textarea>
-            </div>
+    <div id="quiz" style="background-color:yellow;">
+<p style="color: purple; font-size: 30px;">FRANCHISEE QUIZ</p>
+<div id="ques"></div>
+<div id="res"></div>
+    </div>
+<br><br>
+    <div style="background-color: #1affa3; width: 30%; display: inline-block;text-align: center;" id="formbox">
 
-<br>
-            <input type="submit" id="submit" value="Submit">
-        </form>
+      <p style="padding-top: 2%;color:black;text-align: center;">FRANCHISEE OPPORTUNITIES</p>
+      <form>
+
+        <div>
+          <input id="textbox1" type="text" placeholder="Name*">
+        </div>
+        <br>
+        <div>
+          <input id="textbox1" type="text" placeholder="Phone*">
+        </div>
+        <br>
+        <div>
+          <input id="textbox1" type="text" placeholder="Location*">
+        </div>
+        <br>
+        <div>
+          <input id="textbox1" type="text" placeholder="Email*">
+        </div>
+        <br>
+        <div>
+          <textarea id="textbox1" type="text" placeholder="Message"></textarea>
+        </div>
+
+        <br>
+        <input type="submit" id="submit" value="Submit">
+      </form>
     </div>
 
 
     <div class="footer">
-        <div class="container">
-          <div id="social-icons-and-nav">
-            <ul id="social-icons">
-              <li style="color:white">Reach out to us on </li>
-    
-              <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
-              <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-              <li><a href="https://www.youtube.com/" class="fa fa-youtube"></a></li>
-            </ul>
-          </div>
+      <div class="container">
+        <div id="social-icons-and-nav">
+          <ul id="social-icons">
+            <li style="color:white">Reach out to us on </li>
+
+            <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
+            <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
+            <li><a href="https://www.youtube.com/" class="fa fa-youtube"></a></li>
+          </ul>
         </div>
+      </div>
 
-
+<script src="../js/franchisee.js"></script>
 </body>
 
 </html>
