--- a/html/womenservices.html
+++ b/html/womenservices.html
@@ -95,8 +95,12 @@
                 <div class="mendata">SUPER HAIR CARE</div>
             </div>
             <div>
-                <img class="menimg" id="locate"
+                <a href="locator.html">
+                    <img class="menimg2" id="locate"
                     src="http://mygreentrends.in/assets/home-salon-locate-d8c4c7d87f6d9e769b9e4ebdf45c4aab.png" />
+
+                </a>
+            
             </div>
 
 
